--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
                                 </h1>
                                 <ul id="icons02" class="icons">
                                     <li>
-                                        <a class="n01" href="../external.html?link=https://instagram.com/not.bhargav">
+                                        <a class="n01" href="../external.html?link=https://instagram.com/not.bhargav/">
                                             <svg>
                                                 <use xlink:href="#icon-910"></use>
                                             </svg>
